syntax = "proto3";

package Shop.Application.DTOs.Product;

message ProductParameter {
    int32 current_page = 1;
    int32 take_page = 2;
    int32 page_count = 3;
    string filter = 4;
    string store = 5;
    string categury = 6;
    string brand = 7;
    string type = 8;
}
